Bug 304989 - Pressing ESC does not work after editing started in table cell
Summary: Pressing ESC does not work after editing started in table cell
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.5.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.8
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on: 329892
Blocks:
  Show dependency treegraph
 
Reported: 2012-08-11 20:22 UTC by Jarosław Staniek
Modified: 2014-02-20 10:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-08-11 20:22:17 UTC
Pressing ESC does not work after editing started in table cell. This makes it impossible to undo editing of single cell since pressing ESC was the only way to undo.



Reproducible: Always

Steps to Reproduce:
1. Open table in data view and clock on any editable cell , e.g. of text type
2. Start entering text
3. Press ESC key
Actual Results:  
Nothing happens.

Expected Results:  
Editing should be undo-ed.

Moreover, canceling entire row editing cannot be performed using the ESC key (toolbar button exists for this however).
Comment 1 Jarosław Staniek 2012-08-11 20:26:52 UTC
I tried to debug the code, but it's a bit tricky. Some filtering or shortcuts may be the cause. Recommended approach is to have a breakpoint on internal Qt code e.g. QKeyEvent, so Debug Qt version is needed.