Improve focus, keyboard interaction and painting in table and form views

- Focus combo box after accepting or cancelling selection in combo popup
- Show focus in combo box after accepting or cancelling row changes
- Remove focus from combo box after clicking outside of its popup
- Improve appearance of combo box' button in table view
- Fix missing re-display of table view combo box popup
- Fix focus in table view combo box popup
- Make clipboard shortcuts work again in table view cells
- Properly set focus inside table view after activation

BUG:304989
BUG:329892